fix: email. mobile otp, aadhar, pan

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,14 @@ body {
 .font-lobster-two {
   font-family: var(--font-lobster-two);
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
